Первый вариант верстки страницы аватаров

--- a/index.html
+++ b/index.html
@@ -1,7 +1,111 @@
-<html>
- <head>
- </head>
- <body>
-   <h1>Hello World<h1>
- </body>
+<!doctype html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="css/normalize.css?v=8.0.1">
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+
+</head>
+
+<body>
+  <div class="container">
+    <div class="avatar selected">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/0.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="avatar">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/MD_michael.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="avatar">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/MD_michael.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="avatar loading">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/MD_michael.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="avatar loading">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/MD_michael.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="avatar loading">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/MD_michael.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="avatar loading">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/MD_michael.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="avatar loading">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/MD_michael.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="avatar loading">
+      <div class="avatar-border"></div>
+      <div class="avatar-content">
+        <img src="images/loading.gif" class="loading-image" alt="Loading">
+        <img src="avatars/MD_michael.png" class="avatar-image" alt="Avatar">
+      </div>
+      <div class="avatar-mark">
+        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+      </div>
+    </div>
+    <div class="blank"></div>
+    <div class="blank"></div>
+    <div class="blank"></div>
+  </div>
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
