Исправление тени, первой загрузки, чистка проекта

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <img src="avatars/0.png" class="avatar-image" alt="Avatar">
       </div>
       <div class="avatar-mark">
-        <img src="images/pr_icon_check.png" class="avatar-mark-image" alt="Selected">
+        <img src="images/icon-check.png" class="avatar-mark-image" alt="Selected">
       </div>
     </div>
   </div>
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.js?v=1.0"></script>
 </body>
 </html>
