Первая рабочая реализация

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <img src="images/icon-check.png" class="avatar-mark-image" alt="Selected">
       </div>
     </div>
+    <div class="gap hidden"></div>
   </div>
   <script src="js/scripts.js?v=1.0"></script>
 </body>
