Запрет темной темы

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <head>
   <meta charset="utf-8">
+  <meta name="color-scheme" content="light only">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css?v=8.0.1">
-  <link rel="stylesheet" href="css/styles.css?v=1.0.3">
+  <link rel="stylesheet" href="css/styles.css?v=1.0.4">
 </head>
 <body>
   <div class="container">
