Передача Base64 выбранной аватарки

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/styles.css?v=1.0.4">
 </head>
 <body>
+  <canvas class="hidden"></canvas>
   <div class="container">
     <div class="avatar hidden">
       <div class="avatar-border"></div>
@@ -20,6 +21,6 @@
     </div>
     <div class="gap hidden"></div>
   </div>
-  <script src="js/scripts.js?v=1.0.4"></script>
+  <script src="js/scripts.js?v=1.0.5"></script>
 </body>
 </html>
