--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
     </div>
     <div class="gap hidden"></div>
   </div>
-  <script src="js/scripts.js?v=1.0.5"></script>
+  <script defer src="js/scripts.js?v=1.0.5"></script>
 </body>
 </html>
