--- a/ad.html
+++ b/ad.html
@@ -23,7 +23,7 @@
 
       googletag.cmd.push(() => {
         rewardedSlot = googletag.defineOutOfPageSlot(
-          "/22639388115/rewarded_web_example",
+          "/23206363191/all.games",
           googletag.enums.OutOfPageFormat.REWARDED,
         );
 
